[build-system]
requires = [
    "setuptools>=61.2",
    "cython~=0.29",
    "numpy~=1.21",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "fplore.__version__"}

[project]
name = "fplore"
description = "FPLO run evaluation"
requires-python = ">=3.8, <4"
keywords = ["dft", "fplo", "physics", "chemistry"]
license = {text = "GPLv3"}
urls = {Homepage = "https://github.com/mueslo/fplore"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy~=1.21",
    "scipy~=1.7",
    "pymatgen~=2022.5.19",
    "orderedattrdict~=1.5",
    "logbook~=1.5",
    "pyparsing~=2.4",
    "progressbar2~=3.38",
    "matplotlib~=3.4",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = [
    "tox",
]
tests-core = [
    "pytest",
    "pytest-cases",
    "pytest-logbook",
]
docs = [
    "sphinx~=7.0",
    "sphinx-gallery~=0.13",
    "Pillow",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)