[build-system]
requires = [
    "setuptools>=75",
    "cython~=3.1",
    "numpy~=2.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "fplore.__version__"}

[project]
name = "fplore"
description = "FPLO run evaluation"
requires-python = ">=3.10, <3.14"
keywords = ["dft", "fplo", "physics", "chemistry"]
license = {text = "GPLv3"}
urls = {Homepage = "https://github.com/mueslo/fplore"}
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy~=2.2",
    "scipy~=1.15",
    "pymatgen~=2025.4",
    "orderedattrdict~=1.5",
    "logbook~=1.8",
    "pyparsing~=3.2",
    "progressbar2>=3.38,<5.0",
    "matplotlib~=3.10",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
tests = [
    "tox",
]
tests-core = [
    "pytest~=8.3",
    "pytest-cases",
    "pytest-logbook",
]
docs = [
    "sphinx~=7.0",
    "sphinx-gallery~=0.13",
    "Pillow",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)